using System;

namespace Server.Api.Models
{
    public class Course
    {
        public string name { get; set; }
        public int number { get; set; }
    }
}