using System;

namespace Server.Api.Models
{
    public class Channel
    {
        public string name { get; set; }
        public string description { get; set; }
    }
}