using System;

namespace Server.Api.Models
{
    public class Professor: User 
    {
        
    }
}