using System;

namespace Server.Api.Models
{
    public class Topic
    {
        public int id { get; set; }
		public string name { get; set; }
    }
}